put and getSingle endpoints
