# controllers/comments.js
@@ -11,9 +11,53 @@ const getAllComments = async (req, res) => {
     });
 };
 
-// GET SINGLE - RayVen
+// GET SINGLE - Joel
+const getSingleComment = async (req, res) => {
+    //#swagger.tags=['Comments - Get Single']
+    try {
+        const commentId = new ObjectId(req.params.id);
+        const result = await mongodb.getDatabase().collection('comments').find({ _id: commentId });
+        const comments = await result.toArray();
+        
+        if (comments.length === 0) {
+            return res.status(404).json({ error: 'Comment not found' });
+        }
+        
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(comments[0]);
+    } catch (error) {
+        res.status(500).json({ error: 'Failed to retrieve comment' });
+    }
+};
 
 // PUT - RayVen
+const updateComment = async (req, res) => {
+    //#swagger.tags=['Comments - Update Comment']
+    try {
+        const commentId = new ObjectId(req.params.id);
+        const comment = {
+            user_id: req.body.user_id,
+            username: req.body.username,
+            rating: req.body.rating,
+            comment: req.body.comment,
+            date_posted: req.body.date_posted
+        };
+
+        const response = await mongodb.getDatabase().collection('comments').replaceOne({ _id: commentId }, comment);
+        
+        if (response.matchedCount === 0) {
+            return res.status(404).json({ error: 'Comment not found' });
+        }
+        
+        if (response.modifiedCount > 0) {
+            res.status(200).json({ message: 'Comment updated successfully' });
+        } else {
+            res.status(500).json({ error: 'Failed to update comment' });
+        }
+    } catch (error) {
+        res.status(500).json({ error: 'Failed to update comment' });
+    }
+};
 
 // POST - Rebecca
 const createComment = async (req, res) => {
@@ -46,5 +90,7 @@ const createComment = async (req, res) => {
 
 module.exports = {
     getAllComments,
+    getSingleComment,
+    updateComment,
     createComment
 }
