# controllers/orders.js
@@ -11,9 +11,55 @@ const getAllOrders = async (req, res) => {
     });
 };
 
-// GET SINGLE - RayVen
+// GET SINGLE - Joel
+const getSingleOrder = async (req, res) => {
+    //#swagger.tags=['Orders - Get Single']
+    try {
+        const orderId = new ObjectId(req.params.id);
+        const result = await mongodb.getDatabase().collection('orders').find({ _id: orderId });
+        const orders = await result.toArray();
+        
+        if (orders.length === 0) {
+            return res.status(404).json({ error: 'Order not found' });
+        }
+        
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(orders[0]);
+    } catch (error) {
+        res.status(500).json({ error: 'Failed to retrieve order' });
+    }
+};
 
 // PUT - RayVen
+const updateOrder = async (req, res) => {
+    //#swagger.tags=['Orders - Update Order']
+    try {
+        const orderId = new ObjectId(req.params.id);
+        const order = {
+            order_id: req.body.order_id,
+            user_id: req.body.user_id,
+            product_id: req.body.product_id,
+            quantity: req.body.quantity,
+            total_price: req.body.total_price,
+            order_date: req.body.order_date,
+            status: req.body.status
+        };
+
+        const response = await mongodb.getDatabase().collection('orders').replaceOne({ _id: orderId }, order);
+        
+        if (response.matchedCount === 0) {
+            return res.status(404).json({ error: 'Order not found' });
+        }
+        
+        if (response.modifiedCount > 0) {
+            res.status(200).json({ message: 'Order updated successfully' });
+        } else {
+            res.status(500).json({ error: 'Failed to update order' });
+        }
+    } catch (error) {
+        res.status(500).json({ error: 'Failed to update order' });
+    }
+};
 
 // POST - Rebecca
 const createOrder = async (req, res) => {
@@ -48,5 +94,7 @@ const createOrder = async (req, res) => {
 
 module.exports = {
     getAllOrders,
+    getSingleOrder,
+    updateOrder,
     createOrder
 }
