# controllers/products.js
@@ -11,9 +11,54 @@ const getAllProducts = async (req, res) => {
     });
 };
 
-// GET SINGLE - RayVen
+// GET SINGLE - Joel
+const getSingleProduct = async (req, res) => {
+    //#swagger.tags=['Products - Get Single']
+    try {
+        const productId = new ObjectId(req.params.id);
+        const result = await mongodb.getDatabase().collection('products').find({ _id: productId });
+        const products = await result.toArray();
+        
+        if (products.length === 0) {
+            return res.status(404).json({ error: 'Product not found' });
+        }
+        
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(products[0]);
+    } catch (error) {
+        res.status(500).json({ error: 'Failed to retrieve product' });
+    }
+};
 
 // PUT - RayVen
+const updateProduct = async (req, res) => {
+    //#swagger.tags=['Products - Update Product']
+    try {
+        const productId = new ObjectId(req.params.id);
+        const product = {
+            product_id: req.body.product_id,
+            product_name: req.body.product_name,
+            category: req.body.category,
+            price: req.body.price,
+            release_date: req.body.release_date,
+            description: req.body.description
+        };
+
+        const response = await mongodb.getDatabase().collection('products').replaceOne({ _id: productId }, product);
+        
+        if (response.matchedCount === 0) {
+            return res.status(404).json({ error: 'Product not found' });
+        }
+        
+        if (response.modifiedCount > 0) {
+            res.status(200).json({ message: 'Product updated successfully' });
+        } else {
+            res.status(500).json({ error: 'Failed to update product' });
+        }
+    } catch (error) {
+        res.status(500).json({ error: 'Failed to update product' });
+    }
+};
 
 // POST - Rebecca
 const createProduct = async (req, res) => {
@@ -47,5 +92,7 @@ const createProduct = async (req, res) => {
 
 module.exports = {
     getAllProducts,
+    getSingleProduct,
+    updateProduct,
     createProduct
 }
