# controllers/users.js
@@ -11,9 +11,53 @@ const getAllUsers = async (req, res) => {
     });
 };
 
-// GET SINGLE - RayVen
+// GET SINGLE - Joel
+const getSingleUser = async (req, res) => {
+    //#swagger.tags=['Users - Get Single']
+    try {
+        const userId = new ObjectId(req.params.id);
+        const result = await mongodb.getDatabase().collection('users').find({ _id: userId });
+        const users = await result.toArray();
+        
+        if (users.length === 0) {
+            return res.status(404).json({ error: 'User not found' });
+        }
+        
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(users[0]);
+    } catch (error) {
+        res.status(500).json({ error: 'Failed to retrieve user' });
+    }
+};
 
 // PUT - RayVen
+const updateUser = async (req, res) => {
+    //#swagger.tags=['Users - Update User']
+    try {
+        const userId = new ObjectId(req.params.id);
+        const user = {
+            user_id: req.body.user_id,
+            username: req.body.username,
+            join_date: req.body.join_date,
+            location: req.body.location,
+            bio: req.body.bio
+        };
+
+        const response = await mongodb.getDatabase().collection('users').replaceOne({ _id: userId }, user);
+        
+        if (response.matchedCount === 0) {
+            return res.status(404).json({ error: 'User not found' });
+        }
+        
+        if (response.modifiedCount > 0) {
+            res.status(200).json({ message: 'User updated successfully' });
+        } else {
+            res.status(500).json({ error: 'Failed to update user' });
+        }
+    } catch (error) {
+        res.status(500).json({ error: 'Failed to update user' });
+    }
+};
 
 // POST - Rebecca
 const createUser = async (req, res) => {
@@ -46,5 +90,7 @@ const createUser = async (req, res) => {
 
 module.exports = {
     getAllUsers,
+    getSingleUser,
+    updateUser,
     createUser
 }
