# routes/products.js
@@ -7,11 +7,11 @@ const validation = require('../middleware/validate');
 
 router.get('/', Controller.getAllProducts);
 
-// router.get('/:id', gamesController.getSingle);
+router.get('/:id', Controller.getSingleProduct);
 
 router.post('/', validation.saveProduct, Controller.createProduct);
 
-// router.put('/:id', validation., Controller.update)
+router.put('/:id', validation.saveProduct, Controller.updateProduct);
 
 // router.delete('/:id', Controller.delete);
 
