# routes/users.js
@@ -7,11 +7,11 @@ const validation = require('../middleware/validate');
 
 router.get('/', Controller.getAllUsers);
 
-// router.get('/:id', gamesController.getSingle);
+router.get('/:id', Controller.getSingleUser);
 
 router.post('/', validation.saveUser, Controller.createUser);
 
-// router.put('/:id', validation., Controller.update)
+router.put('/:id', validation.saveUser, Controller.updateUser);
 
 // router.delete('/:id', Controller.delete);
 
